--- a/LESS_New/framework test.html
+++ b/LESS_New/framework test.html
@@ -20,10 +20,12 @@
 
 <input type="checkbox" id="checkbox-1" class="checkbox">
 <label for="checkbox-1"></label>
+<input type="checkbox" id="checkbox-2" class="checkbox">
+<label for="checkbox-2"></label>
 
-<input type="radio" id="radio-1" class="radio">
+<input type="radio" id="radio-1" name="yes" class="radio">
 <label for="radio-1"></label>
-<input type="radio" id="radio-3" class="radio">
+<input type="radio" id="radio-3" name="yes" class="radio">
 <label for="radio-3"></label>
 
 
